// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab matches snapshot when selected 1`] = `
<DocumentFragment>
  <div
    class=" tab tabName"
  >
    <button
      class="tab-label"
    >
      Test Tab
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab matches snapshot with custom className 1`] = `
<DocumentFragment>
  <div
    class="custom-class tab tabName"
  >
    <button
      class="tab-label"
    >
      Test Tab
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class=" tab tabName"
  >
    <button
      class="tab-label"
    >
      Test Tab
    </button>
  </div>
</DocumentFragment>
`;
